# MockGen

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/src/mockapi/: main.py
backend/src/mockapi/api/: router.py
backend/src/mockapi/core/: config.py  dependencies.py
backend/src/mockapi/prompts/: graphql_api.prompt  rest_api.prompt
backend/src/mockapi/schemas/: models.py
backend/src/mockapi/services/: ai_client.py  generation_service.py  graphql_handler.py  mock_manager.py
backend/src/mockapi/utils/: logger.py
backend/tests/: test_api_router.py
docs/: Architecture.md  Configuration.md  LLM-Integration.md  PromptSpec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ApiForm.vue  ErrorAlert.vue  HealthStatus.vue  HistoryPanel.vue  ResultsDisplay.vue
frontend/src/services/: api.js
frontend/src/stores/: apiStore.js
